--- a/content/post/csv-to-ccloud.adoc
+++ b/content/post/csv-to-ccloud.adoc
@@ -17,7 +17,7 @@ categories:
 :rouge-css: style
 :rouge-style: github
 
-The https://www.confluent.io/hub/streamthoughts/kafka-connect-file-pulse?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_csv-to-ccloud.adoc&utm_term=rmoff-devx[FilePulse connector] from https://twitter.com/fhussonnois[Florian Hussonnois] is a really useful connector for Kafka Connect which enables you to ingest flat files including CSV, JSON, XML, etc into Kafka. You can read more it in https://streamthoughts.github.io/kafka-connect-file-pulse/docs/overview/filepulse/[its overview here]. Other connectors for ingested CSV data include https://www.confluent.io/hub/jcustenborder/kafka-connect-spooldir?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_csv-to-ccloud.adoc&utm_term=rmoff-devx[kafka-connect-spooldir] (which I /2020/06/17/loading-csv-data-into-kafka/[wrote about previously]), and https://www.confluent.io/hub/mmolimar/kafka-connect-fs?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_csv-to-ccloud.adoc&utm_term=rmoff-devx[kafka-connect-fs]. 
+The https://www.confluent.io/hub/streamthoughts/kafka-connect-file-pulse?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_csv-to-ccloud.adoc&utm_term=rmoff-devx[FilePulse connector] from https://twitter.com/fhussonnois[Florian Hussonnois] is a really useful connector for Kafka Connect which enables you to ingest flat files including CSV, JSON, XML, etc into Kafka. You can read more it in https://streamthoughts.github.io/kafka-connect-file-pulse/docs/overview/filepulse/[its overview here]. Other connectors for ingested CSV data include https://www.confluent.io/hub/jcustenborder/kafka-connect-spooldir?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_csv-to-ccloud.adoc&utm_term=rmoff-devx[kafka-connect-spooldir] (which I link:/2020/06/17/loading-csv-data-into-kafka/[wrote about previously]), and https://www.confluent.io/hub/mmolimar/kafka-connect-fs?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_csv-to-ccloud.adoc&utm_term=rmoff-devx[kafka-connect-fs]. 
 
 Here I'll show how to use it to stream CSV data into a topic in https://www.confluent.io/confluent-cloud/tryfree?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_csv-to-ccloud.adoc&utm_term=rmoff-devx[Confluent Cloud]. You can apply the same config pattern to any other secured Kafka cluster. 
 
