--- a/content/post/streaming-messages-from-rabbitmq-into-kafka.adoc
+++ b/content/post/streaming-messages-from-rabbitmq-into-kafka.adoc
@@ -24,7 +24,7 @@ https://www.reddit.com/r/java/comments/elv88o/streaming_messages_from_rabbitmq_i
 
 Often RabbitMQ is in use already and it's easier to stream the messages from it into Kafka (e.g. to use with ksqlDB, drive other Kafka apps, persist for analysis elsewhere, etc) than it is to re-plumb the existing application(s) that are using RabbitMQ.
 
-Another reason (_thanks to my colleague https://twitter.com/miguno[Michael Noll] for pointing this one out_) is migrations, where you run Kafka alongside RabbitMQ (ot others) in parallel so new apps can get built against Kafka right away — and still get access to all RabbitMQ data — and gradually migrate legacy apps and data sources from RabbitMQ to Kafka. Migrate incrementally, which is safer than big bang. 
+Another reason (_thanks to my colleague https://twitter.com/miguno[Michael Noll] for pointing this one out_) is migrations, where you run Kafka alongside RabbitMQ (or others) in parallel so new apps can get built against Kafka right away — and still get access to all RabbitMQ data — and gradually migrate legacy apps and data sources from RabbitMQ to Kafka. Migrate incrementally, which is safer than big bang. 
 
 > Why would you choose to implement Kafka next to an existing RabbitMQ? Don't they serve the same purpose?
 
